--- a/config/dev.conf
+++ b/config/dev.conf
@@ -7,4 +7,4 @@ logpath : ./parser.log
 
 ## NewRelic
 newrelicKey : 6d91ca13798027e532d8a67132d52ba34eba28bb
-newrelicName : 2Hive.Parser
+newrelicName : 2Hive.Parser.Dev
